Add functional weight-matrix creation.

--- a/2_item_recall.ipynb
+++ b/2_item_recall.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "from aux import Generic\n",
     "from ntwk import LIFNtwk\n",
-    "from plot import raster, set_font_size\n",
+    "from disp import print_red, raster, set_font_size\n",
     "\n",
     "import PARAMS as P_GLOBAL"
    ]
@@ -45,6 +45,7 @@
    "source": [
     "P = Generic(\n",
     "    N=500,\n",
+    "    W_A_OUT_OUT=P_GLOBAL.W_A_PC_PC,\n",
     ")"
    ]
   },
@@ -74,7 +75,8 @@
     "    \"\"\"\n",
     "    Probabilistically assign item labels to n neurons.\n",
     "    Exactly 4 items are considered, with hard-coded \n",
-    "    combination probabilities.\n",
+    "    combination probabilities. Generalization to N items\n",
+    "    is beyond the scope of this project.\n",
     "    \n",
     "    :param n: number of neurons\n",
     "    :param q: prob. of neuron being in any given item group\n",
@@ -162,45 +164,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "\u001b[31m\n",
       ">> TEST_ASSIGN_ITEMS_NO_OVERLAP...\n",
-      "\n",
-      "q = 0.2\n",
-      "q_hat = 0.1985\n",
-      "\n",
-      "q* = 0.0\n",
-      "q*_hat = 0.0\n",
-      "\n",
-      "unique items per neuron ([0, 1]) = {0, 1}\n",
-      "\n",
-      "\n",
+      "\u001b[0m\n",
+      "\u001b[31m    q = 0.2\u001b[0m\n",
+      "\u001b[31m    q_hat = 0.1985\n",
+      "\u001b[0m\n",
+      "\u001b[31m    q* = 0.0\u001b[0m\n",
+      "\u001b[31m    q*_hat = 0.0000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    unique items per neuron ([0, 1]) = {0, 1}\n",
+      "\u001b[0m\n",
+      "\u001b[31m\n",
       ">> TEST_ASSIGN_ITEMS_COMPLETE_OVERLAP...\n",
-      "\n",
-      "q = 0.2\n",
-      "q_hat = 0.2014\n",
-      "\n",
-      "q* = 1.0\n",
-      "q*_hat = 1.0\n",
-      "\n",
-      "unique items per neuron ([0, 4]) = {0, 4}\n",
-      "\n",
-      "\n",
+      "\u001b[0m\n",
+      "\u001b[31m    q = 0.2\u001b[0m\n",
+      "\u001b[31m    q_hat = 0.2014\n",
+      "\u001b[0m\n",
+      "\u001b[31m    q* = 1.0\u001b[0m\n",
+      "\u001b[31m    q*_hat = 1.0000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    unique items per neuron ([0, 4]) = {0, 4}\n",
+      "\u001b[0m\n",
+      "\u001b[31m\n",
       ">> TEST_ASSIGN_ITEMS_PARTIAL_OVERLAP...\n",
-      "\n",
-      "q = 0.2\n",
-      "q_hat = 0.200525\n",
-      "\n",
-      "q* = 0.5\n",
-      "q*_hat = 0.5046751920174396\n",
-      "\n",
-      "unique items per neuron ([0, 1, 2, 3, 4]) = {0, 1, 2, 3, 4}\n",
-      "\n"
+      "\u001b[0m\n",
+      "\u001b[31m    q = 0.2\u001b[0m\n",
+      "\u001b[31m    q_hat = 0.2005\n",
+      "\u001b[0m\n",
+      "\u001b[31m    q* = 0.5\u001b[0m\n",
+      "\u001b[31m    q*_hat = 0.5047\n",
+      "\u001b[0m\n",
+      "\u001b[31m    unique items per neuron ([0, 1, 2, 3, 4]) = {0, 1, 2, 3, 4}\n",
+      "\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "def test_assign_items_no_overlap():\n",
-    "    print('\\n>> test_assign_items_no_overlap...\\n'.upper())\n",
+    "    print_red('\\n>> test_assign_items_no_overlap...\\n'.upper())\n",
     "    \n",
     "    n = 10000\n",
     "    q = 0.2\n",
@@ -209,19 +211,19 @@
     "    rslt = assign_items(n=n, q=q, q_star=q_star, test=True)\n",
     "    \n",
     "    # ensure correct item probability  \n",
-    "    print('q = {}'.format(q))\n",
-    "    print('q_hat = {}\\n'.format(rslt.q_hat))\n",
+    "    print_red('    q = {}'.format(q))\n",
+    "    print_red('    q_hat = {0:.4f}\\n'.format(rslt.q_hat))\n",
     "\n",
     "    # ensure no overlap\n",
-    "    print('q* = {}'.format(q_star))\n",
-    "    print('q*_hat = {}\\n'.format(rslt.q_star_hat.mean()))\n",
+    "    print_red('    q* = {}'.format(q_star))\n",
+    "    print_red('    q*_hat = {0:.4f}\\n'.format(rslt.q_star_hat.mean()))\n",
     "    \n",
     "    # ensure only 0 or 1 item per neuron\n",
-    "    print('unique items per neuron ([0, 1]) = {}\\n'.format(set(rslt.labels.sum(1))))\n",
+    "    print_red('    unique items per neuron ([0, 1]) = {}\\n'.format(set(rslt.labels.sum(1))))\n",
     "    \n",
     "\n",
     "def test_assign_items_complete_overlap():\n",
-    "    print('\\n>> test_assign_items_complete_overlap...\\n'.upper())\n",
+    "    print_red('\\n>> test_assign_items_complete_overlap...\\n'.upper())\n",
     "    \n",
     "    n = 10000\n",
     "    q = 0.2\n",
@@ -230,19 +232,19 @@
     "    rslt = assign_items(n=n, q=q, q_star=q_star, test=True)\n",
     "    \n",
     "    # ensure correct item probability  \n",
-    "    print('q = {}'.format(q))\n",
-    "    print('q_hat = {}\\n'.format(rslt.q_hat))\n",
+    "    print_red('    q = {}'.format(q))\n",
+    "    print_red('    q_hat = {0:.4f}\\n'.format(rslt.q_hat))\n",
     "\n",
     "    # ensure complete overlap\n",
-    "    print('q* = {}'.format(q_star))\n",
-    "    print('q*_hat = {}\\n'.format(rslt.q_star_hat.mean()))\n",
+    "    print_red('    q* = {}'.format(q_star))\n",
+    "    print_red('    q*_hat = {0:.4f}\\n'.format(rslt.q_star_hat.mean()))\n",
     "    \n",
     "    # ensure only 0 or 4 items per neuron\n",
-    "    print('unique items per neuron ([0, 4]) = {}\\n'.format(set(rslt.labels.sum(1))))\n",
+    "    print_red('    unique items per neuron ([0, 4]) = {}\\n'.format(set(rslt.labels.sum(1))))\n",
     "    \n",
     "\n",
     "def test_assign_items_partial_overlap():\n",
-    "    print('\\n>> test_assign_items_partial_overlap...\\n'.upper())\n",
+    "    print_red('\\n>> test_assign_items_partial_overlap...\\n'.upper())\n",
     "    \n",
     "    n = 10000\n",
     "    q = 0.2\n",
@@ -251,15 +253,15 @@
     "    rslt = assign_items(n=n, q=q, q_star=q_star, test=True)\n",
     "    \n",
     "    # ensure correct item probability  \n",
-    "    print('q = {}'.format(q))\n",
-    "    print('q_hat = {}\\n'.format(rslt.q_hat))\n",
+    "    print_red('    q = {}'.format(q))\n",
+    "    print_red('    q_hat = {0:.4f}\\n'.format(rslt.q_hat))\n",
     "\n",
     "    # ensure correct partial overlap\n",
-    "    print('q* = {}'.format(q_star))\n",
-    "    print('q*_hat = {}\\n'.format(rslt.q_star_hat.mean()))\n",
+    "    print_red('    q* = {}'.format(q_star))\n",
+    "    print_red('    q*_hat = {0:.4f}\\n'.format(rslt.q_star_hat.mean()))\n",
     "    \n",
     "    # ensure any number of items per neuron\n",
-    "    print('unique items per neuron ([0, 1, 2, 3, 4]) = {}\\n'.format(set(rslt.labels.sum(1))))\n",
+    "    print_red('    unique items per neuron ([0, 1, 2, 3, 4]) = {}\\n'.format(set(rslt.labels.sum(1))))\n",
     "            \n",
     "\n",
     "np.random.seed(0)\n",
@@ -273,19 +275,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Tests passed if:\n",
+    "1. Estimates (q_hat, q_star_hat) are near truth values.\n",
+    "1. If unique items per neuron match parentheticals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Weight matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def make_w(labels, p_0, p_1, P):\n",
-    "    return w"
+    "def make_w(labels, p_0, p_1, P, test=False):\n",
+    "    \"\"\"Create weight matrix given neuron labeling.\"\"\"\n",
+    "    \n",
+    "    n = len(labels)\n",
+    "    \n",
+    "    # get all intra-item cxn possibilities\n",
+    "    mask_intras = []\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        \n",
+    "        # get intra-cxns for item i\n",
+    "        mask_intra_ = np.outer(labels[:, i], labels[:, i])\n",
+    "        \n",
+    "        # zero self-cxns\n",
+    "        np.fill_diagonal(mask_intra_, 0)\n",
+    "        \n",
+    "        mask_intras.append(mask_intra_)\n",
+    "    \n",
+    "    # take union of intra-item cxn possibilities\n",
+    "    mask_intra = np.logical_or.reduce(mask_intras)\n",
+    "    n_intra = mask_intra.sum()\n",
+    "    \n",
+    "    # build cxn matrix\n",
+    "    cxn = np.zeros((n, n), bool)\n",
+    "    \n",
+    "    # set intra-item cnxs\n",
+    "    assert 0 <= p_1 <= 1\n",
+    "    cxn[mask_intra] = np.random.binomial(1, p_1, n_intra)\n",
+    "    \n",
+    "    # set non-intra cxns\n",
+    "    p_2 = ((n * (n - 1) * p_0) - (n_intra * p_1)) / ((n * (n - 1)) - n_intra)\n",
+    "    \n",
+    "    assert 0 <= p_2 <= 1\n",
+    "    cxn[~mask_intra] = np.random.binomial(1, p_2, (~mask_intra).sum())\n",
+    "    \n",
+    "    # zero self-cxns\n",
+    "    np.fill_diagonal(cxn, 0)\n",
+    "    \n",
+    "    # convert to weight matrix\n",
+    "    w = cxn * P.W_A_OUT_OUT\n",
+    "    \n",
+    "    if not test:\n",
+    "        \n",
+    "        return w\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        # estimate p_0\n",
+    "        mask_non_self = ~np.eye(n, dtype=bool)\n",
+    "        p_0_hat = (w > 0)[mask_non_self].mean()\n",
+    "        \n",
+    "        # estimate p_1\n",
+    "        p_1_hat = np.array([(w > 0)[mask_intra].mean() for mask_intra in mask_intras])\n",
+    "        \n",
+    "        return Generic(w=w, p_0_hat=p_0_hat, p_1_hat=p_1_hat)"
    ]
   },
   {
@@ -297,12 +361,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m\n",
+      ">> TEST_MAKE_W...\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_0 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_0_hat = 0.1000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_1 = 0\u001b[0m\n",
+      "\u001b[31m    p_1_hat = 0.0000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_0 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_0_hat = 0.1000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_1 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_1_hat = 0.0999\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_0 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_0_hat = 0.1000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_1 = 0.2\u001b[0m\n",
+      "\u001b[31m    p_1_hat = 0.2000\n",
+      "\u001b[0m\n",
+      "\u001b[31m\n",
+      ">> TEST_MAKE_W_PARTIAL_OVERLAP...\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_0 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_0_hat = 0.1000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_1 = 0\u001b[0m\n",
+      "\u001b[31m    p_1_hat = 0.0000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_0 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_0_hat = 0.1000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_1 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_1_hat = 0.0999\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_0 = 0.1\u001b[0m\n",
+      "\u001b[31m    p_0_hat = 0.1000\n",
+      "\u001b[0m\n",
+      "\u001b[31m    p_1 = 0.2\u001b[0m\n",
+      "\u001b[31m    p_1_hat = 0.1999\n",
+      "\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_make_w_no_overlap():\n",
+    "    print_red('\\n>> test_make_w...\\n'.upper())\n",
+    "    \n",
+    "    n = 10000\n",
+    "    q = 0.2\n",
+    "    q_star = 0\n",
+    "    \n",
+    "    p_0 = 0.1\n",
+    "    p_1s = [0, 0.1, 0.2]\n",
+    "    \n",
+    "    labels = assign_items(n=n, q=q, q_star=q_star)\n",
+    "    \n",
+    "    for p_1 in p_1s:\n",
+    "        \n",
+    "        rslt = make_w(labels, p_0, p_1, P, test=True)\n",
+    "        \n",
+    "        print_red('    p_0 = {}'.format(p_0))\n",
+    "        print_red('    p_0_hat = {0:.4f}\\n'.format(rslt.p_0_hat))\n",
+    "        \n",
+    "        print_red('    p_1 = {}'.format(p_1))\n",
+    "        print_red('    p_1_hat = {0:.4f}\\n'.format(rslt.p_1_hat.mean()))\n",
+    "        \n",
+    "\n",
+    "def test_make_w_partial_overlap():\n",
+    "    print_red('\\n>> test_make_w_partial_overlap...\\n'.upper())\n",
+    "    \n",
+    "    n = 10000\n",
+    "    q = 0.2\n",
+    "    q_star = 0.5\n",
+    "    \n",
+    "    p_0 = 0.1\n",
+    "    p_1s = [0, 0.1, 0.2]\n",
+    "    \n",
+    "    labels = assign_items(n=n, q=q, q_star=q_star)\n",
+    "    \n",
+    "    for p_1 in p_1s:\n",
+    "        \n",
+    "        rslt = make_w(labels, p_0, p_1, P, test=True)\n",
+    "        \n",
+    "        print_red('    p_0 = {}'.format(p_0))\n",
+    "        print_red('    p_0_hat = {0:.4f}\\n'.format(rslt.p_0_hat))\n",
+    "        \n",
+    "        print_red('    p_1 = {}'.format(p_1))\n",
+    "        print_red('    p_1_hat = {0:.4f}\\n'.format(rslt.p_1_hat.mean()))\n",
+    "        \n",
+    "\n",
+    "test_make_w_no_overlap()\n",
+    "test_make_w_partial_overlap()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tests passed if:\n",
+    "1. All estimates (*_hat) approximate truth values."
+   ]
   },
   {
    "cell_type": "markdown",
