Add function to build plastic ntwk.

--- a/2_item_recall.ipynb
+++ b/2_item_recall.ipynb
@@ -45,7 +45,28 @@
    "source": [
     "P = Generic(\n",
     "    N=500,\n",
+    "    \n",
+    "    T_M=P_GLOBAL.T_M_PC,\n",
+    "    E_L=P_GLOBAL.E_L_PC,\n",
+    "    V_TH=P_GLOBAL.V_TH_PC,\n",
+    "    V_RESET=P_GLOBAL.V_RESET_PC,\n",
+    "    \n",
+    "    T_R=0.002,\n",
+    "    \n",
+    "    E_A=P_GLOBAL.E_A,\n",
+    "    E_N=P_GLOBAL.E_N,\n",
+    "    T_A=P_GLOBAL.T_A,\n",
+    "    T_N=P_GLOBAL.T_N,\n",
+    "    \n",
     "    W_A_OUT_OUT=P_GLOBAL.W_A_PC_PC,\n",
+    "    W_A_OUT_IN=P_GLOBAL.W_A_PC_PL,\n",
+    "    W_N_OUT_CTL_I=P_GLOBAL.W_N_PC_EC_I,\n",
+    "    W_N_OUT_CTL_F=P_GLOBAL.W_N_PC_EC_F,\n",
+    "    \n",
+    "    T_W=P_GLOBAL.T_W,\n",
+    "    T_C=P_GLOBAL.T_C,\n",
+    "    C_S=P_GLOBAL.C_S,\n",
+    "    B_C=P_GLOBAL.B_C,\n",
     ")"
    ]
   },
@@ -284,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Weight matrix"
+    "### Recurrent weight matrix"
    ]
   },
   {
@@ -295,8 +316,8 @@
    },
    "outputs": [],
    "source": [
-    "def make_w(labels, p_0, p_1, P, test=False):\n",
-    "    \"\"\"Create weight matrix given neuron labeling.\"\"\"\n",
+    "def make_w_rcr_a(labels, p_0, p_1, P, test=False):\n",
+    "    \"\"\"Create recurrent AMPA weight matrix given neuron labeling.\"\"\"\n",
     "    \n",
     "    n = len(labels)\n",
     "    \n",
@@ -369,7 +390,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[31m\n",
-      ">> TEST_MAKE_W...\n",
+      ">> TEST_MAKE_W_RCR_A_NO_OVERLAP...\n",
       "\u001b[0m\n",
       "\u001b[31m    p_0 = 0.1\u001b[0m\n",
       "\u001b[31m    p_0_hat = 0.1000\n",
@@ -390,7 +411,7 @@
       "\u001b[31m    p_1_hat = 0.2000\n",
       "\u001b[0m\n",
       "\u001b[31m\n",
-      ">> TEST_MAKE_W_PARTIAL_OVERLAP...\n",
+      ">> TEST_MAKE_W_RCR_A_PARTIAL_OVERLAP...\n",
       "\u001b[0m\n",
       "\u001b[31m    p_0 = 0.1\u001b[0m\n",
       "\u001b[31m    p_0_hat = 0.1000\n",
@@ -414,8 +435,8 @@
     }
    ],
    "source": [
-    "def test_make_w_no_overlap():\n",
-    "    print_red('\\n>> test_make_w...\\n'.upper())\n",
+    "def test_make_w_rcr_a_no_overlap(P):\n",
+    "    print_red('\\n>> test_make_w_rcr_a_no_overlap...\\n'.upper())\n",
     "    \n",
     "    n = 10000\n",
     "    q = 0.2\n",
@@ -428,7 +449,7 @@
     "    \n",
     "    for p_1 in p_1s:\n",
     "        \n",
-    "        rslt = make_w(labels, p_0, p_1, P, test=True)\n",
+    "        rslt = make_w_rcr_a(labels, p_0, p_1, P, test=True)\n",
     "        \n",
     "        print_red('    p_0 = {}'.format(p_0))\n",
     "        print_red('    p_0_hat = {0:.4f}\\n'.format(rslt.p_0_hat))\n",
@@ -437,8 +458,8 @@
     "        print_red('    p_1_hat = {0:.4f}\\n'.format(rslt.p_1_hat.mean()))\n",
     "        \n",
     "\n",
-    "def test_make_w_partial_overlap():\n",
-    "    print_red('\\n>> test_make_w_partial_overlap...\\n'.upper())\n",
+    "def test_make_w_rcr_a_partial_overlap(P):\n",
+    "    print_red('\\n>> test_make_w_rcr_a_partial_overlap...\\n'.upper())\n",
     "    \n",
     "    n = 10000\n",
     "    q = 0.2\n",
@@ -451,7 +472,7 @@
     "    \n",
     "    for p_1 in p_1s:\n",
     "        \n",
-    "        rslt = make_w(labels, p_0, p_1, P, test=True)\n",
+    "        rslt = make_w_rcr_a(labels, p_0, p_1, P, test=True)\n",
     "        \n",
     "        print_red('    p_0 = {}'.format(p_0))\n",
     "        print_red('    p_0_hat = {0:.4f}\\n'.format(rslt.p_0_hat))\n",
@@ -460,8 +481,8 @@
     "        print_red('    p_1_hat = {0:.4f}\\n'.format(rslt.p_1_hat.mean()))\n",
     "        \n",
     "\n",
-    "test_make_w_no_overlap()\n",
-    "test_make_w_partial_overlap()"
+    "test_make_w_rcr_a_no_overlap(P)\n",
+    "test_make_w_rcr_a_partial_overlap(P)"
    ]
   },
   {
@@ -476,20 +497,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Upstream AMPA weights (from item inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def make_w_up_a(labels, P):\n",
+    "    \n",
+    "    # IN (item inputs)\n",
+    "    w_up_a_in = labels * P.W_A_OUT_IN\n",
+    "    \n",
+    "    # CTL (control channels)\n",
+    "    n = len(labels)\n",
+    "    w_up_a_ctl = np.zeros((n, n))\n",
+    "    \n",
+    "    w_up_a = np.concatenate([w_up_a_in, w_up_a_ctl], 1)\n",
+    "    \n",
+    "    return w_up_a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upstream NMDA weights (from control inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def make_w_up_n(labels, P):\n",
+    "    \n",
+    "    n = len(labels)\n",
+    "    \n",
+    "    # IN (item inputs)\n",
+    "    w_up_n_in = np.zeros((n, labels.shape[1]))\n",
+    "    \n",
+    "    # CTL (control channels)\n",
+    "    w_up_n_ctl = np.eye(n) * P.W_N_OUT_CTL_I\n",
+    "    \n",
+    "    w_up_n = np.concatenate([w_up_n_in, w_up_n_ctl], 1)\n",
+    "    \n",
+    "    return w_up_n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Top-level build"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def make_ntwk(n, q, q_star, p_0, p_1, P):\n",
-    "    ntwk.order = ...\n",
-    "    ntwk.labels = ...\n",
+    "    \"\"\"Create LIFNtwk with plastic CTL->OUT synapses.\"\"\"\n",
+    "\n",
+    "    # assign items to nrns and sort into balanced groups\n",
+    "    labels = [[] for _ in range(5)]\n",
+    "    \n",
+    "    for label in assign_items(n, q, q_star):\n",
+    "        \n",
+    "        items = label.nonzero()[0]\n",
+    "        \n",
+    "        if not items.size:\n",
+    "            group = 0\n",
+    "        else:\n",
+    "            group = np.random.choice(items) + 1\n",
+    "        \n",
+    "        labels[group].append(label)\n",
+    "    \n",
+    "    labels = [np.array(labels_) for labels_ in labels]\n",
+    "    labels = np.concatenate(labels, 0)\n",
+    "    \n",
+    "    # get recurrent w\n",
+    "    w_rcr_a = make_w_rcr_a(labels, p_0, p_1, P)\n",
+    "    w_rcr_n = np.zeros((n, n))\n",
+    "    \n",
+    "    ws_rcr = {'AMPA': w_rcr_a, 'NMDA': w_rcr_n}\n",
+    "    \n",
+    "    # get upstream w\n",
+    "    w_up_a = make_w_up_a(labels, P)\n",
+    "    w_up_n = make_w_up_n(labels, P)\n",
+    "    \n",
+    "    ws_up = {'AMPA': w_up_a, 'NMDA': w_up_n}\n",
+    "    \n",
+    "    # make plasticity masks\n",
+    "    masks_plastic = {\n",
+    "        'AMPA': np.zeros((n, n+4), bool),\n",
+    "        'NMDA': np.concatenate([np.zeros((n, 4), bool), np.eye(n, dtype=bool)], 1)\n",
+    "    }\n",
+    "    \n",
+    "    # set synaptic params\n",
+    "    es_syn = {'AMPA': P.E_A, 'NMDA': P.E_N}\n",
+    "    ts_syn = {'AMPA': P.T_A, 'NMDA': P.T_N}\n",
+    "    \n",
+    "    # set plasticity params\n",
+    "    plasticity = {\n",
+    "        'masks': masks_plastic,\n",
+    "        'w_ec_ca3_maxs': {'AMPA': np.nan, 'NMDA': P.W_N_OUT_CTL_F},\n",
+    "        'T_W': P.T_W,\n",
+    "        'T_C': P.T_C,\n",
+    "        'C_S': P.C_S,\n",
+    "        'BETA_C': P.B_C,\n",
+    "    }\n",
+    "    \n",
+    "    # make ntwk\n",
+    "    ntwk = LIFNtwk(\n",
+    "        t_m=np.repeat(P.T_M, n),\n",
+    "        e_l=np.repeat(P.E_L, n),\n",
+    "        v_th=np.repeat(P.V_TH, n),\n",
+    "        v_reset=np.repeat(P.V_RESET, n),\n",
+    "        t_r=np.repeat(P.T_R, n),\n",
+    "        es_syn=es_syn,\n",
+    "        ts_syn=ts_syn,\n",
+    "        ws_rcr=ws_rcr,\n",
+    "        ws_up=ws_up,\n",
+    "        plasticity=plasticity)\n",
+    "    \n",
+    "    ntwk.labels = labels\n",
+    "    \n",
     "    return ntwk"
    ]
   },
