Add and test function to combine multiple population-specific weight matrices into one.

--- a/test_ntwk.ipynb
+++ b/test_ntwk.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test passive membrane properties using neurons with different time constants"
+    "# Test network response functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test passive membrane properties using neurons with different time constants"
    ]
   },
   {
@@ -69,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test current injection evoked spiking"
+    "## Test current injection evoked spiking"
    ]
   },
   {
@@ -140,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test synaptic-input-induced spiking"
+    "## Test synaptic-input-induced spiking"
    ]
   },
   {
@@ -209,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run identical smln where vs and gs are stored as float16"
+    "## Run identical smln where vs and gs are stored as float16"
    ]
   },
   {
@@ -278,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run identical smln where gs are not stored"
+    "## Run identical smln where gs are not stored"
    ]
   },
   {
@@ -347,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run identical smln where only spks are stored"
+    "## Run identical smln where only spks are stored"
    ]
   },
   {
@@ -419,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test afterhyperpolarization\n",
+    "## Test afterhyperpolarization\n",
     "\n",
     "Here we show a neuron's response to tetanic stimulus with and without afterhyperpolarization."
    ]
@@ -519,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test forcing network's voltages and spikes"
+    "## Test forcing network's voltages and spikes"
    ]
   },
   {
@@ -588,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test cells with different refractory periods"
+    "## Test cells with different refractory periods"
    ]
   },
   {
@@ -657,13 +664,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test high resting potential vs excitatory barrage equivalence"
+    "## Test high resting potential vs excitatory barrage equivalence"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%reset -f\n",
@@ -765,6 +774,112 @@
    "metadata": {},
    "source": [
     "Test passed if the gray and green EPSPs are about the same size in both panels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test connectivity functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test function to combine multiple weight matrices into \"block\" matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reset -f\n",
+    "import numpy as np\n",
+    "\n",
+    "from ntwk import combine_w\n",
+    "\n",
+    "    \n",
+    "w_a_correct = np.array([\n",
+    "    # I   I   E   E   E   I   I\n",
+    "    [ 0,  0,  1,  2,  3,  0,  0],  # I\n",
+    "    [ 0,  0,  4,  5,  6,  0,  0],  # I\n",
+    "    [ 0,  0,  1,  2,  3,  0,  0],  # E\n",
+    "    [ 0,  0,  4,  5,  6,  0,  0],  # E\n",
+    "    [ 0,  0,  7,  8,  9,  0,  0],  # E\n",
+    "    [ 0,  0,  7,  8,  9,  0,  0],  # I\n",
+    "    [ 0,  0, 10, 11, 12,  0,  0],  # I\n",
+    "])\n",
+    "\n",
+    "w_g_correct = np.array([\n",
+    "    # I   I   E   E   E   I   I\n",
+    "    [ 1,  2,  0,  0,  0,  3,  4],  # I\n",
+    "    [ 5,  6,  0,  0,  0,  7,  8],  # I\n",
+    "    [ 1,  2,  0,  0,  0,  3,  4],  # E\n",
+    "    [ 5,  6,  0,  0,  0,  7,  8],  # E\n",
+    "    [ 9, 10,  0,  0,  0, 11, 12],  # E\n",
+    "    [ 9, 10,  0,  0,  0, 11, 12],  # I\n",
+    "    [13, 14,  0,  0,  0, 15, 16],  # I\n",
+    "])\n",
+    "\n",
+    "w_a_e_e = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9],\n",
+    "])\n",
+    "\n",
+    "w_a_i_e = np.array([\n",
+    "    [ 1,  2,  3],\n",
+    "    [ 4,  5,  6],\n",
+    "    [ 7,  8,  9],\n",
+    "    [10, 11, 12],\n",
+    "])\n",
+    "\n",
+    "w_g_e_i = np.array([\n",
+    "    [ 1,  2,  3,  4],\n",
+    "    [ 5,  6,  7,  8],\n",
+    "    [ 9, 10, 11, 12],\n",
+    "])\n",
+    "\n",
+    "w_g_i_i = np.array([\n",
+    "    [ 1,  2,  3,  4],\n",
+    "    [ 5,  6,  7,  8],\n",
+    "    [ 9, 10, 11, 12],\n",
+    "    [13, 14, 15, 16],\n",
+    "])\n",
+    "\n",
+    "masks = {\n",
+    "    'E': np.array([0, 0, 1, 1, 1, 0, 0], bool),\n",
+    "    'I': np.array([1, 1, 0, 0, 0, 1, 1], bool),\n",
+    "}\n",
+    "\n",
+    "ws = {\n",
+    "    'AMPA': {\n",
+    "        ('E', 'E'): w_a_e_e,\n",
+    "        ('I', 'E'): w_a_i_e,\n",
+    "    },\n",
+    "    'GABA': {\n",
+    "        ('E', 'I'): w_g_e_i,\n",
+    "        ('I', 'I'): w_g_i_i,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ws_full = combine_w(masks, ws)\n",
+    "\n",
+    "np.testing.assert_array_equal(ws_full['AMPA'], w_a_correct)\n",
+    "np.testing.assert_array_equal(ws_full['GABA'], w_g_correct)\n",
+    "\n",
+    "print('Tests passed.')"
    ]
   }
  ],
