--- a/test_ntwk.ipynb
+++ b/test_ntwk.ipynb
@@ -807,7 +807,7 @@
     "%reset -f\n",
     "import numpy as np\n",
     "\n",
-    "from ntwk import combine_w\n",
+    "from ntwk import join_w\n",
     "\n",
     "    \n",
     "w_a_correct = np.array([\n",
@@ -874,7 +874,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "ws_full = combine_w(masks, ws)\n",
+    "ws_full = join_w(masks, ws)\n",
     "\n",
     "np.testing.assert_array_equal(ws_full['AMPA'], w_a_correct)\n",
     "np.testing.assert_array_equal(ws_full['GABA'], w_g_correct)\n",
