Add specification of src/targ cell classes individually in join_w function.

--- a/test_ntwk.ipynb
+++ b/test_ntwk.ipynb
@@ -794,6 +794,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reset -f\n",
+    "import numpy as np\n",
+    "\n",
+    "from ntwk import join_w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Square connectivity matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -804,12 +823,6 @@
     }
    ],
    "source": [
-    "%reset -f\n",
-    "import numpy as np\n",
-    "\n",
-    "from ntwk import join_w\n",
-    "\n",
-    "    \n",
     "w_a_correct = np.array([\n",
     "    # I   I   E   E   E   I   I\n",
     "    [ 0,  0,  1,  2,  3,  0,  0],  # I\n",
@@ -858,7 +871,7 @@
     "    [13, 14, 15, 16],\n",
     "])\n",
     "\n",
-    "masks = {\n",
+    "cells = {\n",
     "    'E': np.array([0, 0, 1, 1, 1, 0, 0], bool),\n",
     "    'I': np.array([1, 1, 0, 0, 0, 1, 1], bool),\n",
     "}\n",
@@ -874,7 +887,101 @@
     "    }\n",
     "}\n",
     "\n",
-    "ws_full = join_w(masks, ws)\n",
+    "ws_full = join_w(targs=cells, srcs=cells, ws=ws)\n",
+    "\n",
+    "np.testing.assert_array_equal(ws_full['AMPA'], w_a_correct)\n",
+    "np.testing.assert_array_equal(ws_full['GABA'], w_g_correct)\n",
+    "\n",
+    "print('Tests passed.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Non-square connectivity matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "w_a_correct = np.array([\n",
+    "    # UE  UI  UI  UE  UE\n",
+    "    [ 1,  0,  0,  2,  3],  # DE\n",
+    "    [ 1,  0,  0,  2,  3],  # DI\n",
+    "    [ 4,  0,  0,  5,  6],  # DE\n",
+    "    [ 4,  0,  0,  5,  6],  # DI\n",
+    "    [ 7,  0,  0,  8,  9],  # DI\n",
+    "    [10,  0,  0, 11, 12],  # DI\n",
+    "])\n",
+    "\n",
+    "w_g_correct = np.array([\n",
+    "    # UE  UI  UI  UE  UE\n",
+    "    [ 0,  1,  2,  0,  0],  # DE\n",
+    "    [ 0,  1,  2,  0,  0],  # DI\n",
+    "    [ 0,  3,  4,  0,  0],  # DE\n",
+    "    [ 0,  3,  4,  0,  0],  # DI\n",
+    "    [ 0,  5,  6,  0,  0],  # DI\n",
+    "    [ 0,  7,  8,  0,  0],  # DI\n",
+    "])\n",
+    "\n",
+    "w_a_de_ue = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "])\n",
+    "\n",
+    "w_a_di_ue = np.array([\n",
+    "    [ 1,  2,  3],\n",
+    "    [ 4,  5,  6],\n",
+    "    [ 7,  8,  9],\n",
+    "    [10, 11, 12],\n",
+    "])\n",
+    "\n",
+    "w_g_de_ui = np.array([\n",
+    "    [ 1,  2],\n",
+    "    [ 3,  4],\n",
+    "])\n",
+    "\n",
+    "w_g_di_ui = np.array([\n",
+    "    [ 1,  2],\n",
+    "    [ 3,  4],\n",
+    "    [ 5,  6],\n",
+    "    [ 7,  8],\n",
+    "])\n",
+    "\n",
+    "targs = {\n",
+    "    'DE': np.array([1, 0, 1, 0, 0, 0], bool),\n",
+    "    'DI': np.array([0, 1, 0, 1, 1, 1], bool),\n",
+    "}\n",
+    "\n",
+    "srcs = {\n",
+    "    'UE': np.array([1, 0, 0, 1, 1], bool),\n",
+    "    'UI': np.array([0, 1, 1, 0, 0], bool),\n",
+    "}\n",
+    "\n",
+    "ws = {\n",
+    "    'AMPA': {\n",
+    "        ('DE', 'UE'): w_a_de_ue,\n",
+    "        ('DI', 'UE'): w_a_di_ue,\n",
+    "    },\n",
+    "    'GABA': {\n",
+    "        ('DE', 'UI'): w_g_de_ui,\n",
+    "        ('DI', 'UI'): w_g_di_ui,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ws_full = join_w(targs=targs, srcs=srcs, ws=ws)\n",
     "\n",
     "np.testing.assert_array_equal(ws_full['AMPA'], w_a_correct)\n",
     "np.testing.assert_array_equal(ws_full['GABA'], w_g_correct)\n",
