Add test in join_w to make sure weight matrix dimensions align.

--- a/test_ntwk.ipynb
+++ b/test_ntwk.ipynb
@@ -793,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%reset -f\n",
