Last checkpoint before refactor.

--- a/2_item_recall.ipynb
+++ b/2_item_recall.ipynb
@@ -1794,7 +1794,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#df = vary_params(\n",
